<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">健康生活</string>
    <string name="version_code">v1.1.14</string>
    <string name="action_settings">Settings</string>
    <string name="History">History</string>
    <string name="Activity">Activity</string>
    <string name="Settings">Settings</string>
    <string name="DAILY_REPORT">DAILY REPORT</string>
    <string name="WEEKLY_REPORT">WEEKLY REPORT</string>
    <string name="MONTHLY_REPORT">MONTHLY REPORT</string>
    <string name="YEARLY_REPORT">YEARLY REPORT</string>
    <string name="DAY">DAY</string>
    <string name="WEEK">WEEK</string>
    <string name="MONTH">MONTH</string>
    <string name="YEAR">YEAR</string>
    <string name="DAILY">DAILY</string>
    <string name="AVERAGE">AVERAGE</string>
    <string name="KCALS">KCALS</string>
    <string name="BURNED">BURNED</string>
    <string name="STEPS">STEPS</string>
    <string name="SLEEP">SLEEP</string>
    <string name="TODAYS">TODAYS</string>
    <string name="hours">hours</string>
    <string name="Active">Active</string>
    <string name="In_active">In-active</string>
    <string name="percent_of_Average">% of Goal</string>
    <string name="CALORLES">CALORLES</string>
    <string name="GOAL">GOAL</string>
    <string name="kcals">kcals</string>
    <string name="km">km</string>
    <string name="steps">steps</string>
    <string name="Burned">Burned</string>
    <string name="Distance">Distance</string>
    <string name="Steps">Steps</string>
    <string name="Deep">Deep</string>
    <string name="Light">Light</string>
    <string name="Awake">Awake</string>
    <string name="Asleep">Asleep</string>
    <string name="TIME">TIME</string>
    <string name="CALORIES_">Calories(kcals)</string>
    <string name="SLEEP_PATTERN">Sleep Pattern</string>
    <string name="CALORIES_STEPS">Calories/Steps Trend</string>
    <string name="DATE">Date</string>
    <string name="MONTH_">Month</string>
    <string name="SLEEP_RATING">Sleep Rating</string>
    <string name="SETTINGS">SETTINGS</string>
    <string name="My_Profile">My Profile</string>
    <string name="Workout_Goal">Workout Goal</string>
    <string name="Reminder_Setting">Reminder Setting</string>
    <string name="Smart_Alarm">Smart Alarm</string>
    <string name="About_Us">帮助</string>
    <string name="Remote_Camera">Remote Camera</string>
    <string name="Bluetooth">Bluetooth</string>
    <string name="Wake_Up_Session">Wake Up Session</string>
    <string name="Reminder">Reminder</string>
    <string name="Begin_Time">Begin Time</string>
    <string name="End_Time">End Time</string>
    <string name="Interval">Interval</string>
    <string name="Duration">Duration</string>
    <string name="Alarm_Clock">Alarm Clock</string>
    <string name="Alarm_Time">Alarm Time</string>
    <string name="Monitoring_period">Monitoring period</string>
    <string name="headphone_jack_notice">Confirm your device is plugged into the headphone jack…</string>
    <string name="Day_Time">Day Time:</string>
    <string name="day_time_notice">"[Note: Beyond the 'Day Time' scope means the 'Night Time' for sleeping]"</string>
    <string name="height_cm">Height(cm)</string>
    <string name="Weight_kg">Weight(kg)</string>
    <string name="height_example">175</string>
    <string name="weight_example">60</string>
    <string name="marker_1">~</string>
    <string name="marker_2">:</string>
    <string name="NAME">NAME</string>
    <string name="SELECT">SELECT</string>
    <string name="LANGUAGE">LANGUAGE</string>
    <string name="English">English</string>
    <string name="MALE">MALE</string>
    <string name="FEMALE">FEMALE</string>
    <string name="Enter_your_name">Enter your name:</string>
    <string name="Notice">Notice</string>
    <string name="notice_reset">Once the reseting operation is confirmed, all the data in device as well as app will be cleared.</string>
    <string name="goal_notice">Keeping you focused on improving every day.</string>
    <string name="Daily_Goal">Daily Goal:</string>
    <string name="Set_Goals">Set Goals</string>
    <string name="Steps_">Steps:</string>
    <string name="Calories_">Calories:</string>
    <string name="Sleep_">Sleep:</string>
    <string name="RESET_ALL">RESET ALL</string>
    <string name="reset_introduction_1">Restore to factory settings</string>
    <string name="reset_introduction_2">Including all achievements</string>
    <string name="USER_MANUAL">USER MANUAL</string>
    <string name="LOST_MODE">LOST MODE</string>
    <string name="Found_Within">Found Within…</string>
    <string name="distance_1">0 – 1.5m</string>
    <string name="distance_2">1.5 – 3.5m</string>
    <string name="distance_3">3.5 – 6.5m</string>
    <string name="distance_4">> 6.6m</string>
    <string name="Searching">Searching…</string>
    <string name="OK">OK</string>
    <string name="Alarm_Ring">Alarm Ring</string>
    <string name="Commit">Commit</string>
    <string name="Cancel">Cancel</string>
    <string name="SYNC">SYNC</string>
    <string name="TO_DEVICE">TO DEVICE</string>
    <string name="Update_your_progress_1">Update your progress</string>
    <string name="Update_your_progress_2">"and find out how you're doing"</string>
    <string name="Save_succeeded">Save succeeded!</string>
    <string name="Profile_save_fail_datetime">Save failed! Day Time: end time should be later than start time.</string>
    <string name="Reminder_save_fail">Save failed! End time should be later than begin time.</string>
    <string name="No_bluetooth_in_device">No bluetooth in device</string>
    <string name="Please_enable_bluetooth">Please enable bluetooth to connect device</string>
    <string name="Found_device">Found device and start connection</string>
    <string name="name_can_not_be_empty">Name can not be empty</string>
    <string name="bluetooth_connecting">bluetooth connecting</string>
    <string name="synchronizing">synchronizing</string>
    <string name="clearing">clearing</string>
    <string name="connect_fail">connect fail</string>
    <string name="write_date_time_fail">write data time fail</string>
    <string name="write_goal_fail">write goal fail</string>
    <string name="write_day_mode_fail">write day mode fail</string>
    <string name="write_alarm_fail">write alarm fail</string>
    <string name="write_language_fail">write language fail</string>
    <string name="write_profile_fail">write profile fail</string>
    <string name="write_set_screen_fail">write set screen fail</string>
    <string name="write_activity_count_fail">write activity count fail</string>
    <string name="CONNECT">CONNECT</string>
    <string name="save">save</string>
    <string name="Version">Version</string>
    <string name="notice_unbound">Do you want to unbind your band?</string>
    <string name="Unbound_succeeded">Unbound succeeded</string>
    <string name="stop_connecting">Stop connecting</string>
    <string name="stop_synchronizing">Stop synchronizing</string>
    <string name="opening_remote_camera">Opening remote camera</string>
    <string name="take_a_picture">had taken a picture</string>
    <string name="too_frequently">takeing picture too frequently</string>
    <string name="Remind_Function">Remind Features</string>
    <string name="Please_connect_to_your_band_firstly">Please connect to your band first</string>
    <string name="Do_not_find_any_device">Do not find any device</string>
    <string name="Do_not_find_bounded_device">Do not find bounded device</string>
    <string name="Call_Reminder">Call Reminder</string>
    <string name="Message_Reminder">Message Reminder</string>
    <string name="Mail_Reminder">Mail Reminder</string>
    <string name="Band_ID">Band ID:</string>
    <string name="sync_finished">Synchronization is complete</string>
    <string name="finish_app_select">Keep running in the background or completely exit?</string>
    <string name="Completely_exit">Completely exit</string>
    <string name="Running_in_the_background">Running in the background</string>
    <string name="sync_timeout">Sync timeout</string>
    <string name="please_open_bluetooth_in_your_phone">please open bluetooth in your phone</string>
    <string name="steps_per_day">steps/day</string>
    <string name="kcals_per_day">kcals/day</string>
    <string name="hours_per_day">hours/day</string>
    <string name="Wake_Up_Alarm">Wake Up Alarm</string>
    <string name="Exercise_Alarm_1">Exercise Alarm 1</string>
    <string name="Exercise_Alarm_2">Exercise Alarm 2</string>
    <string name="mm35_time_out_request_sync_again">time out request sync again</string>
    <string name="mm35_sync_fail_please_light_up_your_device_and_try_again">sync fail, please light up your device and try again</string>
    <string name="MON">MON</string>
    <string name="TUE">TUE</string>
    <string name="WED">WED</string>
    <string name="THU">THU</string>
    <string name="FRI">FRI</string>
    <string name="SAT">SAT</string>
    <string name="SUN">SUN</string>
    <string name="JAN">JAN</string>
    <string name="FEB">FEB</string>
    <string name="MAR">MAR</string>
    <string name="APR">APR</string>
    <string name="MAY">MAY</string>
    <string name="JUN">JUN</string>
    <string name="JUL">JUL</string>
    <string name="AUG">AUG</string>
    <string name="SEP">SEP</string>
    <string name="OCT">OCT</string>
    <string name="NOV">NOV</string>
    <string name="DEC">DEC</string>
    <string name="value1">0</string>
    <string name="value2">0.0h</string>
    <string name="value3">0.0</string>
    <string name="value4">WED 29 MAR</string>
    <string name="value5">75%</string>
    <string name="value6">2689</string>
    <string name="value7">09:00</string>
    <string name="value8">60min</string>
    <string name="value9">Sport reminder</string>
    <string name="value10">21:00</string>
</resources>
