<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_setting" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <RelativeLayout
            android:id="@id/layout_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_main_top" >

            <ImageView
                android:id="@id/image_title_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15.0dip"
                android:contentDescription="@null"
                android:src="@drawable/image_title_logo" />

            <TextView
                android:id="@id/text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:text="@string/My_Profile"
                android:textColor="@android:color/white"
                android:textSize="@dimen/title_text_size" />
        </RelativeLayout>

        <ScrollView
            android:id="@id/view_scroll"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/layout_title"
            android:layout_marginBottom="@dimen/tab_height" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="15.0dip"
                android:layout_marginRight="15.0dip"
                android:orientation="vertical" >

                <RelativeLayout
                    android:id="@+id/layout_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="10.0dip"
                    android:background="@drawable/button_profile" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/text_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:maxHeight="50.0dip"
                            android:maxWidth="120.0dip"
                            android:text="@string/NAME"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/title_text_size" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="30.0dip"
                            android:contentDescription="@null"
                            android:src="@drawable/image_user_profile" />
                    </LinearLayout>
                </RelativeLayout>

                

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal" >

                    <RadioGroup
                        android:id="@id/group_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20.0dip"
                        android:orientation="horizontal" >

                        <RadioButton
                            android:id="@id/radio_man"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/button_man_selector"
                            android:button="@null" />

                        <RadioButton
                            android:id="@id/radio_woman"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30.0dip"
                            android:background="@drawable/button_woman_selector"
                            android:button="@null" />
                    </RadioGroup>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@id/group_gender"
                        android:layout_alignRight="@id/group_gender"
                        android:layout_below="@id/group_gender"
                        android:layout_marginTop="10.0dip"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@id/text_male"
                            android:layout_width="0.0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.0"
                            android:gravity="center"
                            android:text="@string/MALE"
                            android:textColor="@android:color/white" />

                        <TextView
                            android:id="@id/text_female"
                            android:layout_width="0.0dip"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30.0dip"
                            android:layout_weight="1.0"
                            android:gravity="center"
                            android:text="@string/FEMALE"
                            android:textColor="@android:color/white" />
                    </LinearLayout>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20.0dip"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="0.0dip"
                        android:layout_weight="1.0"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:background="@drawable/background_line_first"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:layout_marginLeft="10.0dip"
                            android:gravity="center_vertical"
                            android:text="@string/height_cm"
                            android:textColor="@android:color/white" />

                        <EditText
                            android:id="@+id/edit_height"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_marginRight="10.0dip"
                            android:background="@null"
                            android:gravity="right|center"
                            android:hint="@string/height_example"
                            android:inputType="number"
                            android:maxLength="3"
                            android:minWidth="50.0dip"
                            android:orientation="horizontal"
                            android:textColor="@android:color/white"
                            android:textColorHint="@android:color/darker_gray" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="0.0dip"
                        android:layout_weight="1.0"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:background="@drawable/background_line_middle"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:layout_marginLeft="10.0dip"
                            android:gravity="center_vertical"
                            android:text="@string/Weight_kg"
                            android:textColor="@android:color/white" />

                        <EditText
                            android:id="@+id/edit_weight"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_marginRight="10.0dip"
                            android:background="@null"
                            android:gravity="right|center"
                            android:hint="@string/weight_example"
                            android:inputType="number"
                            android:maxLength="3"
                            android:minWidth="50.0dip"
                            android:orientation="horizontal"
                            android:textColor="@android:color/white"
                            android:textColorHint="@android:color/darker_gray" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="0.0dip"
                        android:layout_weight="1.0"
                        android:background="@drawable/background_line_last"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@id/text_label_daytime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="10.0dip"
                            android:text="@string/Day_Time"
                            android:textColor="@android:color/white" />

                        <RelativeLayout
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent" >

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"
                                android:layout_marginRight="10.0dip"
                                android:orientation="horizontal" >

                                <TextView
                                    android:id="@id/text_date_time_begin"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/value7"
                                    android:textColor="@color/color_light_blue" />

                                <TextView
                                    android:id="@id/text_marker"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="20.0dip"
                                    android:text="@string/marker_1"
                                    android:textColor="@color/color_light_blue" />

                                <TextView
                                    android:id="@id/text_date_time_end"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="20.0dip"
                                    android:text="@string/value10"
                                    android:textColor="@color/color_light_blue" />
                            </LinearLayout>
                        </RelativeLayout>
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@id/text_note"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5.0dip"
                    android:text="@string/day_time_notice"
                    android:textColor="@android:color/white" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginBottom="15.0dip"
                    android:layout_marginTop="30.0dip" >

                    <Button
                        android:id="@id/button_back"
                        android:layout_width="38.0dip"
                        android:layout_height="30.0dip"
                        android:layout_centerVertical="true"
                        android:background="@drawable/button_back" />

                    <Button
                        android:id="@id/button_save"
                        android:layout_width="90.0dip"
                        android:layout_height="30.0dip"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/button_save"
                        android:gravity="center"
                        android:text="@string/save"
                        android:textColor="@android:color/white" />
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

  
</FrameLayout>